force-app/main/default/objects/Vehicles__c/fields/KM_Driven__c.field-meta.xml
<CustomField>
    <fullName>KM_Driven__c</fullName>
    <label>KM_Driven</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>