force-app/main/default/objects/Vehicles__c/fields/make__c.field-meta.xml
<CustomField>
    <fullName>make__c</fullName>
    <label>make</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>