force-app/main/default/objects/Vehicles__c/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <label>model</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>