force-app/main/default/objects/Vehicles__c/fields/registration_date_earliest__c.field-meta.xml
<CustomField>
    <fullName>registration_date_earliest__c</fullName>
    <label>registration date earliest</label>
    <type>Date</type>
</CustomField>