force-app/main/default/objects/Vehicles__c/fields/registration_date_latest__c.field-meta.xml
<CustomField>
    <fullName>registration_date_latest__c</fullName>
    <label>registration date latest</label>
    <type>Date</type>
</CustomField>