force-app/main/default/objects/Vehicles__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>make__c</columns>
    <columns>model__c</columns>
    <columns>KM_Driven__c</columns>
    <columns>Revenue__c</columns>
    <columns>registration_date_earliest__c</columns>
    <columns>registration_date_latest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>